# TeachMeForWikipedia

./: README.md
teachme/apps/extension/: manifest.json
teachme/apps/extension/src/: api.ts  content.ts  injectButton.ts
teachme/apps/extension/src/panel/: App.tsx
teachme/apps/web/lib/: renderLesson.tsx
teachme/apps/web/pages/: [key].tsx  index.tsx
teachme/infra/: README.md  docker-compose.yml
teachme/services/api/: pyproject.toml
teachme/services/api/src/: main.py
teachme/services/api/src/cache/: redis_cache.py
teachme/services/api/src/clients/: mediawiki.py
teachme/services/api/src/models/: schemas.py
teachme/services/api/src/pipeline/: generate.py  ground.py  place.py  retrieve.py  route_archetype.py  validate.py
teachme/services/api/src/routes/: feedback.py  lesson.py
teachme/services/api/src/store/: postgres.py
teachme/services/api/tests/: test_ground.py  test_route_archetype.py
teachme/services/worker/src/: worker.py
